--- a/P4/app/src/main/res/values/strings.xml
+++ b/P4/app/src/main/res/values/strings.xml
@@ -11,4 +11,28 @@
     <string name="anhadir">Añadir</string>
     <string name="stats">Estadísticas</string>
     <string name="conf">Configuración</string>
+    <string name="title_activity_stats">Estadísticas generales</string>
+    <string name="ok">Aceptar</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="errores">Errores</string>
+    <string name="titulo_stats">Estadísticas</string>
+    <string name="tiempo">Tiempo</string>
+    <string name="distancia">Distancia</string>
+    <string name="piscina_grande">Piscina grande</string>
+    <string name="piscina_media">Piscina media</string>
+    <string name="aguas_abiertas">Aguas abiertas</string>
+    <string name="add_title">Nuevo Entrenamiento</string>
+    <string name="confg">Configuración</string>
+    <string name="Edad">Edad</string>
+    <string name="Nombre">Nombre</string>
+    <string name="Nacionalidad">Nacionalidad</string>
+    <string name="Español">español</string>
+    <string name="Ingles">ingles</string>
+
+
+    <string-array name="languages" >
+        <item>@string/Español</item>
+        <item>@string/Ingles</item>
+    </string-array>
+
 </resources>
